src/test/ui/generator/print/generator-print-verbose-3.stderr
error[E0308]: mismatched types
  --> $DIR/generator-print-verbose-3.rs:7:25
   |
LL |       let generator :() = || {
   |  ____________________--___^
   | |                    |
   | |                    expected due to this
LL | |
LL | |         yield 1i32;
LL | |         return x
LL | |     };
   | |_____^ expected `()`, found generator
   |
   = note: expected unit type `()`
              found generator `[main::{closure#0} upvar_tys=(unavailable)]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
